--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -1229,6 +1229,9 @@ ul.gn-resultview {
   .col-md-5 {
     float: right;
   }
+  .clearfix:after {
+    display: table !important;
+  }
 }
 
 .modal-content {
